feat(translation): integrate Gemma-3 model with intelligent fallback chain
- Add Gemma-First Strategy using TranslateGemma:4b for native-level fluency
- Implement multi-stage fallback (Gemma → NLLB-200 → Helsinki MarianMT) for zero-fail reliability
- Update environment variables for Ollama and OpenRouter integration
- Enhance README with new pipeline details and improved audio/subtitle dubbing features
- Remove outdated Ollama post-processing in favor of primary Gemma translation

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,18 @@ WEBHOOK_URL=https://your-ngrok-url.ngrok-free.dev/api/payments/webhook/polar
 DEMO_MODE=false
 
 # Test credit card for polar.sh sandbox: 4242 4242 4242 4242
+
+# LLM Configuration (Gemma-First Strategy)
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_MODEL=translategemma:4b
+LLM_PROVIDER=ollama
+USE_LLM_POST_PROCESSING=false  # Gemma is primary, post-processing no longer needed
+LLM_TIMEOUT=300
+
+# Optional: Enable context-aware translation for all languages
+ENABLE_CONTEXT_AWARE=true
+
+# Fallback OpenRouter API Configuration (Used if local Ollama fails)
+OPENROUTER_API_KEY=your_key_here
+LLM_MODEL=google/gemma-3-27b-it:free
+LLM_BASE_URL=https://openrouter.ai/api/v1
