feat: enhance audio translator with fallback models and improved logging
Add console handler to backend logging for better debugging output. Introduce fallback LLM models in TranslationConfig for non-CJK translation robustness. Refactor translation logic to use a centralized _translate_with_llm method, incorporating context and duration for more accurate results.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ python-multipart==0.0.16
 # Core AI - CPU-only for maximum compatibility
 # For GPU support, install separately: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 torch==2.1.2
+torchvision==0.16.2
 torchaudio==2.1.2
 
 # Transcription & Translation
