feat(config): expand .env.example with comprehensive configuration options
- Add detailed section headers and comments for better organization
- Include comprehensive configuration for:
  - Core application settings (demo mode, environment)
  - Supabase database and authentication
  - Polar.sh payment integration
  - Speech-to-text (Whisper) configuration
  - Translation model settings (Helsinki-NLP Opus MT)
  - Text-to-speech configuration
  - Credit system and pricing
  - Frontend and API URLs
  - Logging and monitoring
  - Security settings
  - Performance optimization
  - Feature flags
- Add usage instructions and examples for each section
- Include test credit card information for sandbox testing
- Provide detailed setup guide with step-by-step instructions
- Add model size options and device configuration for different hardware setups

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,365 @@
-# SMTP Configuration for email notifications
+# =============================================================================
+# OCTAVIA VIDEO TRANSLATOR - ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and fill in your values
+# =============================================================================
+
+# =============================================================================
+# CORE APPLICATION SETTINGS
+# =============================================================================
+
+# Demo mode settings (true to skip database and auth, false to use real database and auth)
+DEMO_MODE=false
+
+# Application environment
+NODE_ENV=development
+DEBUG=true
+
+# =============================================================================
+# SUPABASE CONFIGURATION (Database & Authentication)
+# =============================================================================
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_SERVICE_KEY=your-supabase-service-key
+SUPABASE_JWT_SECRET=your-jwt-secret-key
+SUPABASE_ANON_KEY=your-anon-key
+
+# =============================================================================
+# PAYMENT INTEGRATION (Polar.sh)
+# =============================================================================
+POLAR_ACCESS_TOKEN=your-polar-access-token
+POLAR_SERVER=sandbox  # Use "sandbox" for testing, "production" for live
+ENABLE_TEST_MODE=false
+DEFAULT_CREDITS=1000
+POLAR_WEBHOOK_SECRET=your-polar-webhook-secret
+WEBHOOK_URL=https://your-ngrok-url.ngrok-free.dev/api/payments/webhook/polar
+
+# Test credit card for polar.sh sandbox: 4242 4242 4242 4242
+
+# =============================================================================
+# SPEECH-TO-TEXT CONFIGURATION (Whisper)
+# =============================================================================
+# Whisper model size - affects speed vs accuracy tradeoff
+# Options: tiny, base, small, medium, large (larger = slower but more accurate)
+WHISPER_MODEL_SIZE=base
+
+# Use faster-whisper for optimized CPU inference (recommended)
+USE_FASTER_WHISPER=true
+WHISPER_DEVICE=cpu  # cpu or cuda (if GPU available)
+WHISPER_COMPUTE_TYPE=float32  # float32 for CPU, float16 for GPU
+
+# Alternative: Use OpenAI Whisper (slower, higher memory)
+# USE_FASTER_WHISPER=false
+# WHISPER_MODEL_PATH=whisper.base
+
+# =============================================================================
+# TRANSLATION MODEL CONFIGURATION
+# =============================================================================
+# Primary translation model (Helsinki-NLP Opus MT)
+# Format: HELSINKI_MODEL_{source}_{target}=model-name
+HELSINKI_MODEL_en_es=Helsinki-NLP/opus-mt-en-es
+HELSINKI_MODEL_es_en=Helsinki-NLP/opus-mt-es-en
+HELSINKI_MODEL_en_fr=Helsinki-NLP/opus-mt-en-fr
+HELSINKI_MODEL_fr_en=Helsinki-NLP/opus-mt-fr-en
+HELSINKI_MODEL_en_de=Helsinki-NLP/opus-mt-en-de
+HELSINKI_MODEL_de_en=Helsinki-NLP/opus-mt-de-en
+HELSINKI_MODEL_en_it=Helsinki-NLP/opus-mt-en-it
+HELSINKI_MODEL_it_en=Helsinki-NLP/opus-mt-it-en
+HELSINKI_MODEL_en_pt=Helsinki-NLP/opus-mt-en-pt
+HELSINKI_MODEL_pt_en=Helsinki-NLP/opus-mt-pt-en
+HELSINKI_MODEL_en_ru=Helsinki-NLP/opus-mt-en-ru
+HELSINKI_MODEL_ru_en=Helsinki-NLP/opus-mt-ru-en
+HELSINKI_MODEL_en_zh=Helsinki-NLP/opus-mt-en-zh
+HELSINKI_MODEL_zh_en=Helsinki-NLP/opus-mt-zh-en
+HELSINKI_MODEL_en_ja=Helsinki-NLP/opus-mt-en-ja
+HELSINKI_MODEL_ja_en=Helsinki-NLP/opus-mt-ja-en
+HELSINKI_MODEL_en_ko=Helsinki-NLP/opus-mt-en-ko
+H_ko_en=HELSINKI_MODELelsinki-NLP/opus-mt-ko-en
+
+# Default source and target languages
+DEFAULT_SOURCE_LANGUAGE=en
+DEFAULT_TARGET_LANGUAGE=es
+
+# =============================================================================
+# LLM TRANSLATION CONFIGURATION (Primary Translation Method)
+# =============================================================================
+
+# LLM Provider: ollama, openrouter, or none (fallback to Helsinki-NLP)
+LLM_PROVIDER=ollama
+USE_LLM_TRANSLATION=true
+
+# Ollama Configuration (Local LLM Server)
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_TIMEOUT=300
+OLLAMA_KEEP_ALIVE=5m
+
+# Ollama Models - Update based on available models
+# qwen2.5:7b = Best for translation with reasoning (recommended)
+# qwen2.5:3b = Smaller model for limited RAM
+PRIMARY_OLLAMA_MODEL=qwen2.5:7b
+FALLBACK_OLLAMA_MODEL=qwen2.5:3b
+
+# OpenRouter Configuration (Cloud LLM - Fallback)
+OPENROUTER_API_KEY=your_openrouter_api_key
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_MODEL=google/gemma-3-27b-it:free
+
+# LLM Translation Settings
+LLM_MAX_TOKENS=4096
+LLM_TEMPERATURE=0.3  # Lower = more consistent translations
+LLM_POST_PROCESSING=true
+ENABLE_CONTEXT_AWARE=true
+
+# Prompt template for translation
+# {text} = text to translate, {source_lang} = source language, {target_lang} = target language
+LLM_TRANSLATION_PROMPT=You are a professional translator. Translate the following text from {source_lang} to {target_lang}. Maintain the original tone, style, and formatting. Only output the translation, nothing else.
+
+# =============================================================================
+# TEXT-TO-SPEECH CONFIGURATION (TTS)
+# =============================================================================
+
+# TTS Provider: edge-tts (Microsoft) or gtts (Google)
+TTS_PROVIDER=gtts  # gtts for reliable Google TTS
+TTS_LANGUAGE_RATE=13  # Characters per second for TTS timing
+
+# Edge-TTS Voices (Windows)
+EDGE_TTS_VOICE=en-US-AriaNeural
+EDGE_TTS_RATE=+0%  # Speed adjustment: +0% to +100%
+EDGE_TTS_PITCH=+0Hz
+
+# Google TTS (gtts) - Language codes only
+GTTS_LANGUAGE=es
+
+# Voice options by language (for UI dropdown)
+TTS_VOICES={"en": "en", "es": "es", "fr": "fr", "de": "de", "it": "it", "pt": "pt", "ja": "ja", "ko": "ko", "zh-cn": "zh-cn"}
+
+# =============================================================================
+# AUDIO/VIDEO PROCESSING CHUNKING
+# =============================================================================
+
+# Chunk size in seconds for parallel processing
+CHUNK_SIZE=30
+MIN_CHUNK_SIZE=15
+MAX_CHUNK_SIZE=60
+
+# Adaptive chunking settings
+ADAPTIVE_CHUNKING_ENABLED=true
+COMPLEXITY_THRESHOLD=0.7
+BATCH_SIZE=6  # Max chunks to process in parallel
+
+# Memory and performance settings
+MEMORY_THRESHOLD_PERCENT=90
+CPU_THRESHOLD_PERCENT=70
+MAX_WORKERS=4
+PROCESSING_DELAY=0.5
+
+# Silence detection for chunk boundaries
+SILENCE_THRESHOLD=-40dB
+MIN_SILENCE_DURATION=500ms
+
+# =============================================================================
+# AUDIO QUALITY SETTINGS
+# =============================================================================
+
+# Audio preprocessing
+AUDIO_NORMALIZE=true
+AUDIO_NORMALIZE_TARGET=-16.0  # LUFS
+AUDIO_DENOISE=true
+AUDIO_DENOISE_STRENGTH=0.5
+
+# Audio format settings
+OUTPUT_AUDIO_FORMAT=wav
+OUTPUT_AUDIO_BITRATE=192k
+SAMPLE_RATE=44100
+CHANNELS=2
+
+# Crossfade between chunks (ms)
+CHUNK_CROSSFADE_MS=50
+
+# =============================================================================
+# SUBTITLE GENERATION SETTINGS
+# =============================================================================
+
+# Subtitle output format
+SUBTITLE_FORMAT=srt  # srt, vtt, ass
+MAX_CHARS_PER_LINE=42
+MAX_CHARS_PER_SECOND=20
+
+# Subtitle styling (ASS format)
+SUBTITLE_FONT_SIZE=48
+SUBTITLE_FONT_NAME=Arial
+SUBTITLE_PRIMARY_COLOR=&H00FFFFFF
+SUBTITLE_BACKGROUND_COLOR=&H80000000
+
+# =============================================================================
+# VIDEO PROCESSING SETTINGS
+# =============================================================================
+
+# Video codec and quality
+VIDEO_CODEC=libx264
+VIDEO_CRF=23  # Constant Rate Factor (lower = better quality)
+VIDEO_PRESET=medium
+VIDEO_BITRATE=5M
+
+# GPU acceleration (if available)
+VIDEO_HWACCEL=cuda  # auto, cuda, vaapi, qsv, or none
+VIDEO_NVENAC_PRESET=p4  # p1 (fastest) to p7 (slowest)
+
+# Output settings
+PRESERVE_ORIGINAL_AUDIO=true
+SEPARATE_VOCALS=false  # Set to true for vocal isolation
+
+# =============================================================================
+# AI ORCHESTRATION SETTINGS
+# =============================================================================
+
+# AI Decision-making for chunk processing
+AI_ORCHESTRATION_ENABLED=true
+AI_MODEL=ollama  # ollama or rule-based
+AI_DECISION_TIMEOUT=5
+
+# Complexity analysis settings
+COMPLEXITY_ANALYSIS_BATCH_SIZE=10
+COMPLEXITY_ANALYSIS_WORKERS=2
+
+# Chunk classification thresholds
+SPEECH_THRESHOLD=0.7  # Min speech ratio to be considered a speech chunk
+COMPLEXITY_THRESHOLD=1.0  # Min complexity to use advanced processing
+
+# =============================================================================
+# QUALITY VALIDATION SETTINGS
+# =============================================================================
+
+# Lip-sync precision tolerance (ms)
+LIP_SYNC_TOLERANCE_MS=200
+
+# Duration match tolerance (percentage)
+DURATION_TOLERANCE_PERCENT=15
+
+# Quality validation settings
+QUALITY_VALIDATION_SPOTS=5
+QUALITY_VALIDATION_THRESHOLD=0.80
+
+# Enable/disable quality validation
+ENABLE_QUALITY_VALIDATION=true
+ENABLE_DURATION_VALIDATION=true
+ENABLE_LIP_SYNC_VALIDATION=true
+
+# =============================================================================
+# EMAIL NOTIFICATIONS (SMTP)
+# =============================================================================
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
 SMTP_FROM=noreply@octavia.com
+SMTP_TLS=true
+SMTP_SSL=false
 
-# Supabase Configuration
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_SERVICE_KEY=your-supabase-service-key
-SUPABASE_JWT_SECRET=your-jwt-secret-key
+# =============================================================================
+# FILE STORAGE SETTINGS
+# =============================================================================
 
-# Polar.sh Payment Integration
-POLAR_ACCESS_TOKEN=your-polar-access-token
-POLAR_SERVER=sandbox  # Use "sandbox" for testing, "production" for live
+# Temporary file directory
+TEMP_DIR=/tmp/octavia  # Linux/Mac
+# TEMP_DIR=C:\Users\[USERNAME]\AppData\Local\Temp\octavia  # Windows
 
-# Payment Settings
-ENABLE_TEST_MODE=false
-DEFAULT_CREDITS=1000
+# Output directories
+OUTPUT_DIR=backend/outputs
+SUBTITLE_OUTPUT_DIR=backend/outputs/subtitles
+PREVIEW_OUTPUT_DIR=backend/outputs/previews
 
-# Webhook configuration
-POLAR_WEBHOOK_SECRET=your-polar-webhook-secret
-WEBHOOK_URL=https://your-ngrok-url.ngrok-free.dev/api/payments/webhook/polar
+# File cleanup settings
+AUTO_CLEANUP=true
+CLEANUP_AFTER_HOURS=24
+MAX_FILE_AGE_DAYS=7
 
-# Demo mode settings (true to skip database and auth, false to use real database and auth)
-DEMO_MODE=false
+# =============================================================================
+# RATE LIMITING & TIMEouts
+# =============================================================================
 
-# Test credit card for polar.sh sandbox: 4242 4242 4242 4242
+# Job timeout settings (seconds)
+JOB_TIMEOUT_SECONDS=300  # 5 minutes
+SUBTITLE_JOB_TIMEOUT=120  # 2 minutes
+AUDIO_JOB_TIMEOUT=600  # 10 minutes
+VIDEO_JOB_TIMEOUT=1800  # 30 minutes
 
-# LLM Configuration (Gemma-First Strategy)
-OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=translategemma:4b
-LLM_PROVIDER=ollama
-USE_LLM_POST_PROCESSING=false  # Gemma is primary, post-processing no longer needed
-LLM_TIMEOUT=300
+# Rate limiting
+RATE_LIMIT_PER_MINUTE=10
+RATE_LIMIT_PER_HOUR=50
 
-# Optional: Enable context-aware translation for all languages
-ENABLE_CONTEXT_AWARE=true
+# =============================================================================
+# FRONTEND SETTINGS
+# =============================================================================
 
-# Fallback OpenRouter API Configuration (Used if local Ollama fails)
-OPENROUTER_API_KEY=your_key_here
-LLM_MODEL=google/gemma-3-27b-it:free
-LLM_BASE_URL=https://openrouter.ai/api/v1
+# API URL
+NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Feature flags
+ENABLE_VIDEO_TRANSLATION=true
+ENABLE_AUDIO_TRANSLATION=true
+ENABLE_SUBTITLE_GENERATION=true
+ENABLE_SUBTITLE_TRANSLATION=true
+ENABLE_SUBTITLE_TO_AUDIO=true
+
+# Max file sizes (bytes)
+MAX_VIDEO_SIZE_MB=500
+MAX_AUDIO_SIZE_MB=100
+MAX_SUBTITLE_SIZE_MB=10
+
+# Credit costs per operation
+CREDIT_COST_VIDEO_TRANSLATION=10
+CREDIT_COST_AUDIO_TRANSLATION=10
+CREDIT_COST_SUBTITLE_GENERATION=1
+CREDIT_COST_SUBTITLE_TRANSLATION=5
+CREDIT_COST_SUBTITLE_TO_AUDIO=5
+
+# =============================================================================
+# LOGGING & MONITORING
+# =============================================================================
+
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+LOG_FORMAT=json
+
+# Log file settings
+LOG_FILE_PATH=artifacts/backend_debug.log
+LOG_MAX_SIZE_MB=10
+LOG_BACKUP_COUNT=5
+
+# Secret masking for logs
+MASK_SECRETS=true
+SECRET_PATTERNS=password,token,key,secret,credential
+
+# =============================================================================
+# DEVELOPMENT SETTINGS
+# =============================================================================
+
+# Enable test endpoints
+ENABLE_TEST_ENDPOINTS=false
+
+# Mock services for testing
+MOCK_TRANSLATION=false
+MOCK_TTS=false
+MOCK_STT=false
+
+# Test video/sample files
+TEST_VIDEO_PATH=backend/test_inputs/sample_video.mp4
+TEST_AUDIO_PATH=backend/test_inputs/sample_audio.wav
+
+# =============================================================================
+# SECURITY SETTINGS
+# =============================================================================
+
+# JWT settings
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_HOURS=24
+
+# API security
+API_KEY_HEADER=X-API-Key
+MAX_REQUEST_SIZE_MB=50
+
+# CORS settings
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+CORS_CREDENTIALS=true
