feat: update job progress tracking and improve gitignore rules
- Refactor job progress tracking to use a dedicated method `_update_job_progress`
  in `VideoTranslationPipeline` class, improving consistency and maintainability
- Remove documentation subdirectories from `.gitignore` to allow tracking
  of documentation assets and generated content
- Enhance `backend/.gitignore` with additional patterns for logs, temporary
  files, and output directories to better manage untracked files
- Remove retry mechanism from `get_job_progress` in `app.py` to simplify
  job fetching logic
- Update frontend UI components to improve user experience with better
  layout and state management for file uploads and job processing

--- a/.gitignore
+++ b/.gitignore
@@ -414,7 +414,4 @@ backend/test_samples/
 backend/outputs/
 
 # Documentation specific
-documentation/assets/
-documentation/connections/
-documentation/progress/
-documentation/screenshots/
+# (Allowing documentation subdirectories to be tracked)
