--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 python-multipart==0.0.16
+python-jose[cryptography]==3.3.0
+bcrypt==4.1.2
 
 # Core AI - CPU-only for maximum compatibility
 # For GPU support, install separately: pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
@@ -33,4 +35,5 @@ scikit-learn>=1.2.0
 python-dotenv  # For loading .env files
 requests       # For API calls to Ollama/OpenRouter
 nvidia-ml-py   # Fixes torch pynvml deprecation warning
+supabase==2.27.0
 
